2008-07-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/barrier.t, user/clock.t, user/dpmem.t, user/msg.t, user/part.t,
	user/region.t, user/rtmon.t, user/sem.t, user/task.t, user/timer.t:
	Correct documentation typos noticed and thankfully reported by
	Fabrício de Novaes Kucinskis <fabricio@dea.inpe.br>

2008-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/.cvsignore: Add chains.texi.

2008-07-09	Chris Johns <chrisj@rtems.org>

	* doc/user/chains.t: New.

	* doc/ada_user/ada_user.texi, doc/user/Makefile.am,
	doc/user/c_user.texi, doc/user/dirstat.texi: Updated for the
	chains documentation.

2008-06-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/io.t: Fix typos for IO unregister reported by Catalin Morosan
	<catalin.morosan at gmail.com>.

2008-06-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add CONFIGURE_DISABLE_CLASSIC_API_NOTEPADS.

2008-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add CONFIGURE_IDLE_TASK_INITIALIZES_APPLICATION and
	CONFIGURE_MAXIMUM_PRIORITY.

2008-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add CONFIGURE_MINIMUM_STACK_SIZE.

2008-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/bsp.t, user/conf.t, user/task.t: Add ability for application to
	configure minimum stack size. Add RTEMS_CONFIGURED_MINIMUM_STACK_SIZE
	constant so user can clearly indicate they want the configured as
	opposed to the recommended minimum stack size.

2008-06-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* started/buildc.t: Add paragraph on see CVS for latest patches.
	* user/conf.t: Add CONFIGURE_MESSAGE_BUFFERS_FOR_QUEUE and example
	of how to compute message CONFIGURE_MESSAGE_BUFFER_MEMORY using it.

2008-06-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/rtmon.t: Change to using new types.

2008-06-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu_supplement/.cvsignore, cpu_supplement/Makefile.am,
	cpu_supplement/arm.t, cpu_supplement/bfin.t,