@@ -1,3 +1,7 @@
+2008-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* shell/confinit.t: New argument sequence for rtems_shell_init().
+
 2008-07-15	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* user/barrier.t, user/clock.t, user/dpmem.t, user/msg.t, user/part.t,
